test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/nopasswd_across_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:
    (root) NOPASSWD: /tmp
    (root) NOPASSWD: /usr/bin/true
    (ferris) NOPASSWD: /usr/bin/false
