test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/passwd.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User root may run the following commands on container:
    (root) PASSWD: /usr/bin/true
