test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/passwd_across_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:
    (root) NOPASSWD: /tmp
    (root) PASSWD: /usr/bin/true
    (ferris) PASSWD: /usr/bin/false
