test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/user_id_runas.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User root may run the following commands on container:
    (#0) ALL
